--- a/changelog
+++ b/changelog
@@ -1,4 +1,22 @@
-commit 8d03610cbf450bc52a607d27faa8ed4ec9ca49e5 (HEAD -> master, origin/master, origin/HEAD)
+commit c745dc50b42a217e45ce37ea10aa1938f7ba6e64 (HEAD -> master, origin/master, origin/HEAD)
+Author: jose perez <sinfallas@gmail.com>
+Date:   Wed Jun 24 09:53:58 2020 -0400
+
+    * update
+
+commit 8258e6494895883015f70af708217439ba228cb8
+Author: jose perez <sinfallas@gmail.com>
+Date:   Mon Apr 27 16:54:08 2020 -0400
+
+    permisos
+
+commit b625b9e0409f398111f1c57a12729f3955ba25ab
+Author: jose perez <sinfallas@gmail.com>
+Date:   Sun Sep 30 13:29:19 2018 -0400
+
+    * changelog
+
+commit 8d03610cbf450bc52a607d27faa8ed4ec9ca49e5
 Author: jose perez <sinfallas@gmail.com>
 Date:   Fri Sep 28 14:28:27 2018 +0000
 
