--- a/changelog
+++ b/changelog
@@ -1,4 +1,16 @@
-commit 55a77d9e56983c79a1cdb3e715cec6bc94fd340f (HEAD -> master, origin/master, origin/HEAD)
+commit 138cf00cf1137c1f640ee8ae74b1b8a85335cb88 (HEAD -> master, origin/master, origin/HEAD)
+Author: config <Palencia>
+Date:   Mon Oct 12 20:13:03 2020 -0400
+
+    * blocksize
+
+commit 8b5f571263f5fcd311dcad3eb2f3bc08b3ce3f4b
+Author: config <Palencia>
+Date:   Mon Oct 12 20:08:45 2020 -0400
+
+    * changelog
+
+commit 55a77d9e56983c79a1cdb3e715cec6bc94fd340f
 Author: config <Palencia>
 Date:   Mon Oct 12 20:08:27 2020 -0400
 
